--- a/Clase 8 - Responsividad y reglas flexibles/package.json
+++ b/Clase 8 - Responsividad y reglas flexibles/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-safe-area-context": "^4.2.5",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
