--- a/Clase 9 - Pantallas y Navegación Base/package.json
+++ b/Clase 9 - Pantallas y Navegación Base/package.json
@@ -10,6 +10,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
     "@types/react-native": "^0.67.6",
     "expo": "~44.0.0",
     "expo-font": "~10.0.4",
@@ -17,7 +19,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-safe-area-context": "^4.2.5",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.13.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
