--- a/Clase 11 - Tab Navigation/package.json
+++ b/Clase 11 - Tab Navigation/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@types/react-native": "^0.67.6",
