Desarrollo clase 14 II

--- a/Clase 14 - Login y Autenticación/package.json
+++ b/Clase 14 - Login y Autenticación/package.json
@@ -18,6 +18,7 @@
     "expo": "~44.0.0",
     "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
+    "joi": "^17.6.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
