--- a/Clase 17 - SQLite/app.json
+++ b/Clase 17 - SQLite/app.json
@@ -1,13 +1,13 @@
 {
   "expo": {
-    "name": "Clase-15-temp",
-    "slug": "Clase-15-temp",
+    "name": "Ecommerce",
+    "slug": "coder-project-29845",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/gamingIcon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -21,10 +21,17 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "com.coderhouse.ecommerce",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "permissions": [
+        "CAMERA",
+        "ACCESS_FINE_LOCATION",
+        "WRITE_EXTERNAL_STORAGE"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
